created styles for author_card

--- a/GalleryInfrastructure/appsettings.json
+++ b/GalleryInfrastructure/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server= DESKTOP-VLOMFU1\\SQLEXPRESS; Database=GalleryMVC; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server= DESKTOP-VLOMFU1\\SQLEXPRESS; Database=Gallery; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
 
   "Logging": {
